LeetCode#179 update